--- a/src/app/pages/faculty-verification/faculty-verification.html
+++ b/src/app/pages/faculty-verification/faculty-verification.html
@@ -1,4 +1,4 @@
-<template args="titles">
+<template args="model">
     <div class="text-content subhead">
         <h1>Instructor Verification</h1>
         <p>
@@ -25,26 +25,26 @@
             <div class="labeled-inputs row top-of-form">
                 <div class="col">
                     <label>
-                        First name
+                        First name <span class="invalid-message">{model.validationMessage('first_name')}</span>
                         <input name="first_name" type="text" required>
                     </label>
                     <label>
-                        Last name
+                        Last name <span class="invalid-message">{model.validationMessage('last_name')}</span>
                         <input name="last_name" type="text" required>
                     </label>
                     <label>
-                        <span>Preferred Email</span>
+                        Preferred Email <span class="invalid-message">{model.validationMessage('email')}</span>
                         <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required>
                     </label>
                 </div>
 
                 <div class="col">
                     <label>
-                        School
+                        School <span class="invalid-message">{model.validationMessage('company')}</span>
                         <input name="company" type="text" required>
                     </label>
                     <label>
-                        Phone
+                        Phone <span class="invalid-message">{model.validationMessage('phone')}</span>
                         <input name="phone" type="text" required>
                     </label>
                 </div>
@@ -56,11 +56,11 @@
             <div class="text-content labeled-inputs row book-info">
                 <div class="col">
                     <label>
-                        College website URL
+                        College website URL <span class="invalid-message">{model.validationMessage('website')}</span>
                         <input name="website" type="text" required>
                     </label>
                     <label>
-                        Official institutional email address
+                        Official institutional email address <span class="invalid-message">{model.validationMessage('00NU0000005oVQV')}</span>
                         <input name="00NU0000005oVQV" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required>
                         <div class="validation-message">
                             Please enter your official school/organizational email address
@@ -69,24 +69,23 @@
                         <small>A verification email will be sent to this address</small>
                     </label>
                     <label>
-                        <span>Are you already using OpenStax in your courses?</span>
+                        Are you already using OpenStax in your courses? <span class="invalid-message">{model.validationMessage('00NU00000055spw')}</span>
                         <div skip="true"></div>
-                        <select name="00NU00000055spw"></select>
+                        <select name="00NU00000055spw" required>
+                            <option each="opt in model.adoptionOptions" value="{opt.value}">{opt.qtext || opt.text}</option>
+                        </select>
                     </label>
                 </div>
 
                 <div class="col">
                     <label>
-                        Number of students this semester
+                        Number of students this semester <span class="invalid-message">{model.validationMessage('00NU00000052VId')}</span>
                         <input name="00NU00000052VId" type="number" min="1" required>
                     </label>
-                    <label>Your OpenStax book:
+                    <label>Your OpenStax book: <span class="invalid-message">{model.validationMessage('00NU00000053nzR')}</span>
                         <div skip="true"></div>
                         <select name="00NU00000053nzR" required>
-                            <option value="" disabled selected></option>
-                            <!-- FIX: Manipulate model data to avoid multiple loops -->
-                            <option each="title in titles" if="title.text" value="{title.value}">{title.text}</option>
-                            <option each="title in titles" if="!title.text" value="{title}">{title}</option>
+                            <option each="title in model.titles" value="{title.value}">{title.text}</option>
                         </select>
                     </label>
                     <div class="cta">
