--- a/src/styles/components/forms.scss
+++ b/src/styles/components/forms.scss
@@ -66,7 +66,7 @@ form {
         .col {
             display: inline-block;
             flex: 1 1 32rem;
-            max-width: 50%; // imprtant for ellipsis on inputs
+            max-width: 50%; // important for ellipsis on inputs
             padding: 0 1.5rem;
 
             @include phone {
@@ -80,16 +80,14 @@ form {
         border: 0;
     }
 
-    &.has-been-submitted {
-        :invalid,
-        .proxy-widget.invalid {
-            border: 0.1rem solid color(danger);
-        }
-    }
-
     label {
         display: block;
         margin: 2rem 0;
+    }
+
+    .invalid-message {
+        color: color(danger);
+        font-style: italic;
     }
 
     &.labeled-inputs {
