--- a/src/app/pages/finish-profile/finish-profile.html
+++ b/src/app/pages/finish-profile/finish-profile.html
@@ -1,67 +1,72 @@
-<div class="hero">
-    <div class="boxed">
-        <h1>Finish your OpenStax profile</h1>
-        <p class="note">All fields are required.</p>
-    </div>
-</div>
-<img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-<div class="boxed">
-    <form accept-charset="UTF-8"
-     action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post" class="form">
-        <div>
-            <input name="utf8" type="hidden" value="✓">
-            <input type="hidden" name="oid" value="00DU0000000Kwch">
-            <input type="hidden" name="retURL" value="{`${window.location.origin}/confirmation?unverified`}">
-            <input type="hidden" name="lead_source" value="OSC User">
-            <input type="hidden" name="first_name">
-            <input type="hidden" name="last_name">
-            <input type="hidden" name="user_id">
-            <input type="hidden" name="OS_Accounts_ID__c">
+<template args="model">
+    <div class="hero">
+        <div class="boxed">
+            <h1>Finish your OpenStax profile</h1>
+            <p class="note">All fields are required.</p>
         </div>
-        <div class="labeled-inputs row">
-            <div class="col">
-                <label>
-                    <span>School/Organization</span>
-                    <input name="company" type="text" required>
-                </label>
-                <label>
-                    <span>Phone number</span>
-                    <input name="phone" type="text" required>
-                </label>
+    </div>
+    <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
+    <div class="boxed">
+        <form accept-charset="UTF-8"
+         action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="post" class="form">
+            <div>
+                <input name="utf8" type="hidden" value="✓">
+                <input type="hidden" name="oid" value="00DU0000000Kwch">
+                <input type="hidden" name="retURL" value="{`${window.location.origin}/confirmation?${model.returnTo}`}">
+                <input type="hidden" name="lead_source" value="{model.leadType}">
+                <input type="hidden" name="first_name" value="{model.firstName}">
+                <input type="hidden" name="last_name" value="{model.lastName}">
+                <input type="hidden" name="user_id" value="{model.userId}">
+                <input type="hidden" name="OS_Accounts_ID__c" value="{model.accountId}">
             </div>
-            <div class="col">
-                <label>Your role
-                <div skip="true"></div>
-                <select name="00NU00000054MLz">
-                    <option disabled selected>Please select</option>
-                    <option each="role in roles" value="{role}">{role}</option>
-                </select>
-            </label>
-                <label>Title(s) you're interested in
-                <div skip="true"></div>
-                <select name="00NU00000053nzR" multiple required>
-                    <!-- FIX: Manipulate model data to avoid multiple loops -->
-                    <option each="title in bookTitles" if="title.text" value="{title.value}">{title.text}</option>
-                    <option each="title in bookTitles" if="!title.text" value="{title}">{title}</option>
-                </select>
-            </label>
-                <div class="checkboxes">
+            <div class="labeled-inputs row">
+                <div class="col">
                     <label>
-                        <input name="newsletter" type="checkbox" value="1" checked>
-                        Keep me informed about OpenStax.
+                        School/Organization
+                        <span class="invalid-message">{model.validationMessage('company')}</span>
+                        <input name="company" type="text" required>
                     </label>
-
                     <label>
-                        <input id="toggle-faculty" type="checkbox">
-                        I want access to faculty-only materials.
+                        Phone number
+                        <span class="invalid-message">{model.validationMessage('phone')}</span>
+                        <input name="phone" type="text" required>
                     </label>
                 </div>
+                <div class="col">
+                    <label>Your role
+                    <span class="invalid-message">{model.validationMessage('00NU00000054MLz')}</span>
+                    <div skip="true"></div>
+                    <select name="00NU00000054MLz" required>
+                        <option each="role in model.roles" value="{role}">{role}</option>
+                    </select>
+                </label>
+                    <label>Title(s) you're interested in
+                    <span class="invalid-message">{model.validationMessage('00NU00000053nzR')}</span>
+                    <div skip="true"></div>
+                    <select name="00NU00000053nzR" multiple required>
+                        <option each="title in model.titles" value="{title.value}">{title.text}</option>
+                    </select>
+                </label>
+                    <div class="checkboxes">
+                        <label>
+                            <input name="newsletter" type="checkbox" value="1" checked>
+                            Keep me informed about OpenStax.
+                        </label>
+
+                        <label if="model.facultyCheckboxAvailable">
+                            <input id="toggle-faculty" type="checkbox"
+                             checked="{model.facultyCheckboxChecked ? '' : null}">
+                            I want access to faculty-only materials.
+                        </label>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div id="faculty-section"></div>
-        <div class="cta">
-            <input type="submit" value="Finish profile" role="button" class="btn btn-orange">
-            <span id="problem-message"></span>
-        </div>
-    </form>
-</div>
+            <div data-region="faculty-section" skip="true"></div>
+            <div class="cta">
+                <input type="submit" value="Finish profile" role="button" class="btn btn-orange"
+                 disabled="{model.problemMessage === '' ? null : ''}">
+                <span class="cta-message">{model.problemMessage}</span>
+            </div>
+        </form>
+    </div>
+</template>
