--- a/src/app/pages/finish-profile/faculty-section/faculty-section.html
+++ b/src/app/pages/finish-profile/faculty-section/faculty-section.html
@@ -1,32 +1,40 @@
-<h2>We manually verify that you are faculty.  Please help us find you!</h2>
-<div class="labeled-inputs row faculty-section">
-    <div class="col">
-        <label>
-            <span>College website URL that shows you work there</span>
-            <input name="website" type="text" required>
-        </label>
-        <label>
-            <span>Official institutional email address</span>
-            <input name="00NU0000005oVQV"  pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required>
-            <div class="validation-message">
-                Please enter your official school/organizational email address
-                to help us verify your position with your school.
-            </div>
-        </label>
+<template args="model">
+    <h2>We manually verify that you are faculty.  Please help us find you!</h2>
+    <div class="labeled-inputs row faculty-section">
+        <div class="col">
+            <label>
+                College website URL that shows you work there
+                <span class="invalid-message">{model.validationMessage('website')}</span>
+                <input name="website" type="text" required>
+            </label>
+            <label>
+                Official institutional email address
+                <span class="invalid-message">{model.validationMessage('00NU0000005oVQV')}</span>
+                <input name="00NU0000005oVQV"  pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required>
+                <div class="validation-message">
+                    Please enter your official school/organizational email address
+                    to help us verify your position with your school.
+                </div>
+            </label>
+        </div>
+        <div class="col last">
+            <label>
+                Number of students you teach per semester
+                <span class="invalid-message">{model.validationMessage('00NU00000052VId')}</span>
+                <input name="00NU00000052VId" type="number" min="0" required>
+            </label>
+            <label>
+                Are you already using OpenStax in your courses?
+                <span class="invalid-message">{model.validationMessage('00NU00000055spw')}</span>
+                <div skip="true"></div>
+                <select name="00NU00000055spw">
+                    <option each="option in model.adoptionOptions" value="{option.value}">{option.text}</option>
+                </select>
+            </label>
+            <label class="form-hidden">
+                <span>Not required</span>
+                <input type="number" min="0">
+            </label>
+        </div>
     </div>
-    <div class="col last">
-        <label>
-            <span>Number of students you teach per semester</span>
-            <input name="00NU00000052VId" type="number" min="0" required>
-        </label>
-        <label>
-            <span>Are you already using OpenStax in your courses?</span>
-            <div skip="true"></div>
-            <select name="00NU00000055spw"></select>
-        </label>
-        <label class="form-hidden">
-            <span>Not required</span>
-            <input type="number" min="0">
-        </label>
-    </div>
-</div>
+</template>
