--- a/src/app/pages/interest/interest.html
+++ b/src/app/pages/interest/interest.html
@@ -20,31 +20,37 @@
             <div class="labeled-inputs row top-of-form">
                 <div class="col">
                     <label>
-                        <span>First name</span>
+                        First name
+                        <span class="invalid-message">{model.validationMessage('first_name')}</span>
                         <input name="first_name" type="text" required>
                     </label>
                     <label>
-                        <span>Last name</span>
+                        Last name
+                        <span class="invalid-message">{model.validationMessage('last_name')}</span>
                         <input name="last_name" type="text" required>
                     </label>
                     <label>
-                        <span>School name</span>
+                        School name
+                        <span class="invalid-message">{model.validationMessage('company')}</span>
                         <input name="company" type="text" required>
                     </label>
                 </div>
 
                 <div class="col">
                     <label>
-                        <span>School url</span>
+                        School url
+                        <span class="invalid-message">{model.validationMessage('URL')}</span>
                         <input name="URL" type="text" required>
                     </label>
                     <label>
-                        <span>Email address</span>
+                        Email address
+                        <span class="invalid-message">{model.validationMessage('email')}</span>
                         <input name="email" type="email"
                          pattern="[^@]+@([^@\.]+\.)+[^@\.]+" required>
                     </label>
                     <label>
-                        <span>Phone number</span>
+                        Phone number
+                        <span class="invalid-message">{model.validationMessage('phone')}</span>
                         <input name="phone" type="text" required>
                     </label>
                 </div>
@@ -58,6 +64,7 @@
                 <div class="col">
                     <label>Which OpenStax College textbook(s) are you interested in adopting?
                         <span class="select-instructions">Select at least one.</span>
+                        <span class="invalid-message"><br />{model.validationMessage('00NU00000053nzR')}</span>
                         <div skip="true"></div>
                         <select name="00NU00000053nzR" multiple required>
                             <option each="title in model.titles" value="{title.value}">{title.text}</option>
@@ -66,6 +73,7 @@
 
                     <label>
                         <span>Students per semester</span>
+                        <span class="invalid-message"><br />{model.validationMessage('00NU00000052VId')}</span>
                         <input name="00NU00000052VId" type="number" min="0" required>
                     </label>
 
@@ -73,6 +81,7 @@
                         Which partners may we share your information with so they may contact you about
                         additional resources supporting the OpenStax College books?
                         <span class="select-instructions">You may select more than one.</span>
+                        <span class="invalid-message"><br />{model.validationMessage('00NU00000055spm')}</span>
                         <div skip="true"></div>
                         <select name="00NU00000055spm" multiple>
                             <option value="Online homework providers">
@@ -92,6 +101,7 @@
 
                     <label class="question">How did you hear about OpenStax College?
                         <span class="select-instructions">Select at least one.</span>
+                        <span class="invalid-message"><br />{model.validationMessage('00NU00000055spr')}</span>
                         <div skip="true"></div>
                         <select name="00NU00000055spr" multiple required>
                             <option value="Web search">Web search</option>
@@ -108,7 +118,7 @@
 
                     <label id="other-source" class="hidden">
                         Other:
-                        <input  name="00NU00000055spr" type="text"
+                        <input name="00NU00000055spr" type="text"
                         placeholder="Heard about us some other way?">
                     </label>
 
