--- a/src/app/pages/home/education/education.html
+++ b/src/app/pages/home/education/education.html
@@ -3,16 +3,7 @@
         <div class="square-1"></div>
         <div class="square-2"></div>
 
-        <div class="quote">
-            <span class="opening">When it comes to education,</span>
-            <strong>there should be no limits.</strong>
-            <span class="blurb">
-                Our high-quality educational tools give students access
-                to the learning materials they need to succeed, at little
-                to no cost. Because we don't believe anything should come
-                between students and their future.
-            </span>
-        </div>
+        <div class="quote" data-html-content="0" skip="true"></div>
 
         <div class="student"></div>
 
@@ -20,14 +11,14 @@
             <ul>
                 <li>
                     <a class="btn btn-large btn-orange higher-ed" href="/higher-ed#getting-started">
-                        <span class="title">Higher Education</span>
-                        <span class="blurb">Peer-reviewed textbooks and digital learning tools. Get started.</span>
+                        <span class="title">{model[1].heading}</span>
+                        <span class="blurb" data-html-content="1" skip="true"></span>
                     </a>
                 </li>
                 <li>
                     <a class="btn btn-large btn-gold k-12" href="/k-12">
-                        <span class="title">K-12</span>
-                        <span class="blurb">Adaptive learning courseware and peer-reviewed textbooks for AP<sup>&reg;</sup> courses</span>
+                        <span class="title">{model[2].heading}</span>
+                        <span class="blurb" data-html-content="2" skip="true"></span>
                     </a>
                 </li>
             </ul>
