Add email to finish-profile form
Also added Bulk Orders button to AP Physics (link goes to non-existent
form)

--- a/src/app/components/get-this-title/get-this-title.html
+++ b/src/app/components/get-this-title/get-this-title.html
@@ -8,18 +8,24 @@
                 <if condition="model.loRes">
                     <a href="{model.loRes}" class="btn">Low Resolution</a>
                     <p>Same content and shorter download, but some lower resolution images</p>
-                </if>
-                <if condition="!model.loRes">
+                <else>
                     <p>Low resolution not available</p>
                 </if>
                 <div class="remover"><i class="fa fa-times" aria-hidden="true"></i></div>
             </div>
             <div class="print-submenu">
                 <h3>Place an Order</h3>
-                <p>
-                    <a href="{model.bookstore.link}" class="btn">Bookstore Orders</a>
-                    Order through NACSCORP
-                </p>
+                <if condition="model.bookstore_link">
+                    <p>
+                        <a href="{model.bookstore.link}" class="btn">Bookstore Orders</a>
+                        Order through NACSCORP
+                    </p>
+                <else>
+                    <p>
+                        <a href="/bulk-order?{model.slug}" class="btn">Bulk Orders</a>
+                        Fill out our form to order in bulk for your school.
+                    </p>
+                </if>
                 <p if="model.amazon.link">
                     <a href="{model.amazon.link}" class="btn">Individual Orders</a>
                     ${model.amazon.price} from seller \"OpenStax\" on Amazon
@@ -28,69 +34,55 @@
             </div>
         </div>
         <div class="options">
-            <if condition="model.webviewLink">
-                <div class="option">
-                    <a href="{model.webviewLink}">
-                        <span class="fa fa-laptop"></span>
-                        View online
-                    </a>
-                </div>
-            </if>
-            <if condition="model.conceptCoachLink">
-                <div class="option">
-                    <a href="{model.conceptCoachLink}">
-                        <span class="fa fa-mortar-board"></span>
-                        View Concept Coach version online
-                    </a>
-                </div>
-            </if>
-            <if condition="model.pdfLink">
-                <div class="option">
-                    <a href="{model.pdfLink}" class="show-pdf-submenu">
-                        <span class="fa fa-cloud-download"></span>
-                        Download a PDF<if condition="model.comingSoon"> sample</if>
-                    </a>
-                </div>
-            </if>
-            <if condition="model.printLink">
-                <div class="option">
-                    <a href="{model.printLink}" class="show-print-submenu">
-                        <span class="fa fa-book"></span>
-                        Order a print copy
-                    </a>
-                </div>
-            </if>
-            <if condition="model.bookshareLink">
-            <div class="option">
+            <div if="model.webviewLink" class="option">
+                <a href="{model.webviewLink}">
+                    <span class="fa fa-laptop"></span>
+                    View online
+                </a>
+            </div>
+            <div if="model.conceptCoachLink" class="option">
+                <a href="{model.conceptCoachLink}">
+                    <span class="fa fa-mortar-board"></span>
+                    View Concept Coach version online
+                </a>
+            </div>
+            <div if="model.pdfLink" class="option">
+                <a href="{model.pdfLink}" class="show-pdf-submenu">
+                    <span class="fa fa-cloud-download"></span>
+                    Download a PDF<if condition="model.comingSoon"> sample</if>
+                </a>
+            </div>
+            <div if="model.printLink" class="option">
+                <a href="{model.printLink}" class="show-print-submenu">
+                    <span class="fa fa-book"></span>
+                    Order a print copy
+                </a>
+            </div>
+            <div if="model.bookshareLink" class="option">
                 <a href="{model.bookshareLink}">
                     <span class="fa fa-volume-up"></span>
                     Bookshare
                 </a>
             </div>
-            </if>
             <if condition="model.ibookLink">
-                <if condition="model.ibookLink2">
-                    <div class="option">
-                        <span class="option-header">
-                            <span class="fa fa-tablet"></span>
-                            iBook
-                        </span>
-                        <a href="{model.ibookLink}">
-                            Volume 1
-                        </a>
-                        <a href="{model.ibookLink2}">
-                            Volume 2
-                        </a>
-                    </div>
-                </if>
-                <if condition="!model.ibookLink2">
-                    <div class="option">
-                        <a href="{model.ibookLink}">
-                            <span class="fa fa-tablet"></span>
-                            Download on iBooks
-                        </a>
-                    </div>
-                </if>
+                <div if="model.ibookLink2" class="option">
+                    <span class="option-header">
+                        <span class="fa fa-tablet"></span>
+                        iBook
+                    </span>
+                    <a href="{model.ibookLink}">
+                        Volume 1
+                    </a>
+                    <a href="{model.ibookLink2}">
+                        Volume 2
+                    </a>
+                </div>
+                <div if="!model.ibookLink2" class="option">
+                    <a href="{model.ibookLink}">
+                        <span class="fa fa-tablet"></span>
+                        Download on iBooks
+                    </a>
+                </div>
             </if>
         </div>
     </div>
