--- a/src/app/pages/finish-profile/finish-profile.html
+++ b/src/app/pages/finish-profile/finish-profile.html
@@ -31,6 +31,11 @@
                         <span class="invalid-message">{model.validationMessage('phone')}</span>
                         <input name="phone" type="text" required>
                     </label>
+                    <label>
+                        Preferred email address
+                        <span class="invalid-message">{model.validationMessage('email')}</span>
+                        <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required>
+                    </label>
                 </div>
                 <div class="col">
                     <label>Your role
