Incorporate editable items on About Us page

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -3,7 +3,7 @@
         <div class="row container-wrap">
             <div class="overlay">
                 <div class="text-block">
-                    <h1>Changing the world is a team effort</h1>
+                    <h1>{model.tagline}</h1>
                 </div>
             </div>
         </div>
@@ -13,26 +13,14 @@
 
     <div class="meta">
         <div class="boxed">
-            <h2>About Us</h2>
-            <p>
-                OpenStax is a nonprofit based at Rice University, and it's our mission to
-                improve student access to education. Our first open source college
-                textbook was published in 2012 and has since scaled to more than 20 books used by
-                hundreds of thousands of students across the globe. Our adaptive learning
-                technology, designed to improve learning outcomes through personalized
-                educational paths, is currently being piloted for K-12 and college.
-                The OpenStax mission is made possible through the generous support of
-                philanthropic foundations. Through these partnerships and our alliance
-                with other educational resource companies, OpenStax is breaking down the
-                most common barriers to learning and empowering students and instructors
-                to succeed.
-            </p>
+            <h2>{model.introHeading}</h2>
+            <insert-html data-name="introParagraph" skip="true"></insert-html>
         </div>
     </div>
 
     <div class="boxed">
         <div each="group in model.bios" class="{group.name === 'team' ? 'our-team' : 'strategic-advisors'}">
-            <h2>{group.name === 'team' ? 'Our Team' : 'Strategic Advisors'}</h2>
+            <h2>{group.name === 'team' ? model.ourTeamHeading : 'Strategic Advisors'}</h2>
             <div class="headshots">
                 <div each="member in group.members" class="headshot{model.tapped === member.id ? ' tapped' : ''}{member.hidden ? ' hidden' : ''}" data-id="{member.id}">
                     <div class="picture-area{group.name === 'team' ? ' text-'+member.textColor+' bg-'+member.bgColor : ''}{member.image ? ' has-picture' : ''}">
@@ -45,6 +33,7 @@
                         <div class="description" data-html="description" skip="true"></div>
                     </div>
                 </div>
+                <div each="spaceholder in [1,2,3]" class="headshot hidden"></div>
             </div>
         </div>
     </div>
