--- a/src/app/pages/bulk-order/bulk-order.html
+++ b/src/app/pages/bulk-order/bulk-order.html
@@ -1,8 +1,8 @@
 <template args="model">
     <form action="{`${model.origin}/api/mail/send_mail/`}" class="form" method="post">
         <input type="hidden" name="csrfmiddlewaretoken" value="{model.csrfToken}" />
-        <input name="to_address" type="hidden" value="{model.toAddress}" />
         <input name="message_body" type="hidden" value="{model.messageBody}" />
+        <input name="subject" type="hidden" value="Bulk Order" />
         <div class="text-content">
             <div class="labeled-inputs row top-of-form">
                 <div class="col">
@@ -12,14 +12,15 @@
                         <input name="organization" type="text" required>
                     </label>
                     <label>Organization type
+                        <span class="invalid-message">{model.validationMessage('organization_type')}</span>
                         <div skip="true"></div>
-                        <select name="organization_type">
+                        <select name="organization_type" required>
                             <option each="option in model.orgTypeOptions">{option}</option>
                         </select>
                     </label>
                     <label>
                         Your name
-                        <span class="invalid-message">{model.validationMessage('first_name')}</span>
+                        <span class="invalid-message">{model.validationMessage('from_name')}</span>
                         <input name="from_name" type="text" required>
                     </label>
                 </div>
@@ -31,7 +32,7 @@
                     </label>
                     <label>
                         Email address
-                        <span class="invalid-message">{model.validationMessage('email')}</span>
+                        <span class="invalid-message">{model.validationMessage('from_address')}</span>
                         <input name="from_address" type="email"
                          pattern="[^@]+@([^@\.]+\.)+[^@\.]+" required>
                     </label>
