--- a/src/app/components/buckets/bucket/bucket.html
+++ b/src/app/components/buckets/bucket/bucket.html
@@ -2,9 +2,9 @@
     <div if="model.hasImage" class="image"></div>
     <div class="quote">
         <div>
-            <span class="title">{model.titleText}</span>
+            <span class="title">{model.heading}</span>
             <blurb-html class="blurb"></blurb-html>
         </div>
-        <a class="btn {model.btnClass}" href="{model.linkUrl}">{model.linkText}</a>
+        <a class="btn {model.btnClass}" href="{model.link}">{model.cta}</a>
     </div>
 </template>
