--- a/src/app/pages/higher-ed/higher-ed.html
+++ b/src/app/pages/higher-ed/higher-ed.html
@@ -14,7 +14,7 @@
             <div class="square-2"></div>
         </div>
         <span class="scrolldown-chevron"><a href="#getting-started"><i class="fa fa-chevron-down"></i></a></span>
-        <div class="quote-buckets"></div>
+        <div class="quote-buckets" skip="true"></div>
         <div id="getting-started" class="getting-started">
             <div class="container boxed">
                 <div class="header">{model.get_started_heading}</div>
@@ -54,7 +54,7 @@
             </div>
         </div>
 
-        <div class="products"></div>
-        <div class="buckets"></div>
+        <div class="products" skip="true"></div>
+        <div class="buckets" skip="true"></div>
     </main>
 </template>
