Fix layout of Higher Ed page and Education banner
Also removed some no-longer-used images

--- a/src/app/components/quotes/quote/quote.html
+++ b/src/app/components/quotes/quote/quote.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <if condition="model.image">
+    <if condition="model.image.image">
         <div class="image" style="background-image: url({model.image}){model.height ? `; height: ${model.height}px` : ''}">
         </div>
     </if>
