--- a/src/app/pages/higher-ed/higher-ed.html
+++ b/src/app/pages/higher-ed/higher-ed.html
@@ -14,7 +14,9 @@
             <div class="square-2"></div>
         </div>
         <span class="scrolldown-chevron"><a href="#getting-started"><i class="fa fa-chevron-down"></i></a></span>
-        <div class="quote-buckets" skip="true"></div>
+        <div class="quote-buckets">
+            <div class="boxed" skip="true"></div>
+        </div>
         <div id="getting-started" class="getting-started">
             <div class="container boxed">
                 <div class="header">{model.get_started_heading}</div>
